--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
             </div>
             </div>
         </div>
-        <div>
+        <div class="divchuk-fon">
+          <div class="mobile-version">
+          <h3 class="title-answer-and-question">Питання-відповідь</h3>
+          <div class="intresting">
+            <a href="" class="intresting-1">Загальні питання</a>
+            <a href="" class="intresting-2">Реєстрація та вхід</a>
+            <a href="" class="intresting-2">Вакцинація</a>
+            <a href="" class="intresting-2">Відео-консультація</a>
+          </div>
+          </div>
         <div class="fon">
         </div>
         </div>
